syntax = "proto3";

option java_multiple_files = true;
//option java_package = "org.demo";
//option java_package = "corp.service";
option java_outer_classname = "HelloGrpcProto";

package corp.model;

service HelloGrpc {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
